fix epi forest-plot alignment with scale

--- a/client/css/main.import.less
+++ b/client/css/main.import.less
@@ -146,6 +146,9 @@ input[type=number] {
 .evidenceTable .nestedTbl td {
   border-top: none;
 }
+.hidden{
+  display: none;
+}
 .hiddenRow {
   color: gray;
   background-color: #eee;
@@ -235,12 +238,8 @@ a.selectListRemove {
 
 // Forest plot SVG
 .epiRiskPlot {
-  width:100%;
-  height:100%;
-  top:0;
-  left:0;
-  bottom:0;
-  right:0;
+  position: relative;
+  left: -8px;
 }
 .epiRiskPlot circle {
   fill: black;
